# minimal-ds-client

./: .gitignore  Cargo.toml  README.md
.reuse/: dep5
api_client/: Cargo.toml
api_client/src/: errors.rs  lib.rs  requests.rs
types/: Cargo.toml
types/src/: lib.rs  requests.rs
